--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         alert("YAYY THANK U 😍❤️ , Drop a Message when you are Free ..");
       });
     </script> -->
-  <script src="PageFlip.js"></script>
+  <script src="Control.js"></script>
 </body>
 
 </html>
