--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
       <h2>Happiie Rakhiii ~🏵️~</h2>
       <br /> <br>
       <img src="33.jpg" alt="" width="320" height="240">
+      
+      <br><br>
+      <h6 >&copy;2024 Ashish Verma, All rights reserved.</h6>
+      
       <!-- <button id="botao1">👋 </button> -->
     </div>
   </div>
